# ipc_demo

./: .gitignore  CMakeLists.txt  README.md  进程间通信.md
docs/: 1.进程间通信介绍.md  2.管道通信.md  3.信号通信.md  4.共享内存通信.md  5.消息队列通信.md  6.信号灯集通信.md  7.进程间通信的对比.md  8.定时器.md
docs/images/: ipc.drawio
msg/: CMakeLists.txt  消息队列-客户端进程-双向通信.cpp  消息队列-服务端进程-双向通信.cpp
new/: CMakeLists.txt  重载new_delete.cpp
pipe/: CMakeLists.txt  无名管道_单进程.cpp  无名管道_多进程.cpp  有名管道_多进程之进程A.cpp  有名管道_多进程之进程B.cpp
sem/: CMakeLists.txt  信号灯.cpp
shm/: CMakeLists.txt  共享内存-创建.cpp  共享内存-客户端进程-双向通信.cpp  共享内存-客户端进程-读数据.cpp  共享内存-服务端进程-写数据.cpp  共享内存-服务端进程-双向通信.cpp  共享内存-父子进程通信.cpp
signal/: CMakeLists.txt  信号发送_alarm.cpp  信号发送_kill.cpp  信号发送_raise.cpp  信号发送_raise_暂停进程.cpp
timer/: CMakeLists.txt  定时器_alarm.cpp  定时器_setitimer.cpp
